bug(hover) : add hover to buuton on mobile and tablet
- add hover to button

[Finishes #167915504]

--- a/UI/css/mobile.css
+++ b/UI/css/mobile.css
@@ -133,8 +133,8 @@
   .btn {
     display: inline-block;
     font-size: 0.9rem;
-    color: #fff;
-    background: #60CF80;
+    color: #60CF80;
+    background: #fff;
     padding: 5px 10px;
     border: none;
     cursor: pointer;
@@ -144,6 +144,11 @@
     margin: 10px;
     width: 40%;
   }
+  .btn:hover {
+    background: #60CF80;
+    color: #fff;
+  }
+
   .nepadding {
     margin: 0px;
   }
